<resources>
    <string name="app_name">ZhiHuDaily</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置选项</string>
    <string name="mode_night"> 夜间模式</string>

    <string name="author_name">Dyman</string>
    <string name="github">GitHub: https://github.com/DymanZy</string>
    <string name="zhihuribao">知乎日报</string>
    <string name="login_by_weibo">使用微博登录</string>
    <string name="weibo_sina">新浪微博</string>
    <string name="weibo_tencent">腾讯微博</string>
    <string name="app_statement">知乎日报不会未经同意通过你的微博账号发布任何信息</string>
    <string name="str_editor">主编</string>
    <string name="str_editor_info">主编资料</string>
    <string name="str_new_info">最新消息</string>
    <string name="login_please">请登录</string>
    <string name="my_collect">我的收藏</string>
    <string name="download_offline">离线下载</string>
    <string name="has_no_comment">现在还没有评论</string>


    <string name="drawer_new_info">最新消息</string>
    <string name="drawer_theme_daily">主题日报</string>
    <string name="drawer_sections">栏目总览</string>
    <string name="drawer_command">通用</string>
    <string name="drawer_share">分享软件</string>
    <string name="drawer_about">关于</string>


    <string name="setting_general">常规</string>
    <string name="setting_auto_download_offline">自动离线下载</string>
    <string name="setting_auto_download_only_connect_wifi">仅Wi-Fi下可用，自动下载最新内容</string>
    <string name="setting_no_image_mode">无图模式</string>
    <string name="setting_no_image_under_mobile_network">2G/3G网络下不下载图片</string>
    <string name="setting_big_text_size">大字号</string>
    <string name="setting_other">其他</string>
    <string name="setting_push_info">推送消息</string>
    <string name="setting_comment_share_to_weibo">点评分享到微博</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_check_update">检查更新</string>
    <string name="setting_version_info">版本： 2.6.2(763)</string>
    <string name="setting_feedback">反馈</string>
    <string name="setting_feedback_info">意见反馈</string>


    <string name="dialog_agree">赞同</string>
    <string name="dialog_report">举报</string>
    <string name="dialog_copy">复制</string>
    <string name="dialog_reply">回复</string>


    <string name="share_sina">新浪微博</string>
    <string name="share_weixin">微信</string>
    <string name="share_friends">微信朋友圈</string>
    <string name="share_evernote">印象笔记</string>
    <string name="share_youdao">有道云笔记</string>
    <string name="share_qq">QQ</string>
    <string name="share_more">更多平台</string>


    <string name="str_agree">点赞 </string>
    <string name="str_pack_up">收起</string>
    <string name="str_spread">展开</string>
    <string name="str_about">关于</string>
    <string name="str_share">分享</string>
    <string name="str_login">登录</string>
    <string name="str_use_sina_login">使用新浪微博接口登录</string>
    <string name="str_use_tencent_login">使用腾讯微博接口登录</string>
    <string name="str_exit_when_press_again">再按一次退出</string>
    <string name="str_setting">设置</string>
    <string name="str_current_is_latest_version">现在已经是最新版本</string>
    <string name="str_date_load_success">数据加载成功</string>
    <string name="str_date_load_failure">数据加载失败</string>
    <string name="str_date_load_failure_check_network">数据加载失败，请检查网络情况</string>
    <string name="str_date_more_load_success">加载更多数据完成</string>
    <string name="str_get_story_extra_failure">无法获取文章额外数据</string>
    <string name="str_welcome_back">欢迎回来！</string>
    <string name="str_pre_read_schedule">上次阅读进度为 </string>
    <string name="str_network_not_available">当前网络不可用，请检查网络连接</string>

</resources>
