<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical">

        <!--常规 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/setting_general"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:padding="15dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_auto_download_offline"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_auto_download_only_connect_wifi"
                    android:textColor="@color/black_light"/>
            </LinearLayout>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:checked="true"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cut_off_light"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:padding="15dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_no_image_mode"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_no_image_under_mobile_network"
                    android:textColor="@color/black_light"/>
            </LinearLayout>
            <CheckBox
                android:id="@+id/noImageMode_cb_content_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cut_off_light"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/setting_big_text_size"
                    android:textColor="@color/black"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>


        <!-- 其它 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/setting_other"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/setting_push_info"
                android:textColor="@color/black"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:checked="true"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cut_off_light"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/setting_comment_share_to_weibo"
                android:textColor="@color/black"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:checked="true"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cut_off_light"/>

        <RelativeLayout
            android:id="@+id/clearCache_rl_content_setting"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:foreground="?android:selectableItemBackground"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/setting_clear_cache"
                android:textColor="@color/black"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cut_off_light"/>

        <LinearLayout
            android:id="@+id/checkVersion_ll_content_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?android:selectableItemBackground"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_check_update"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_version_info"/>
        </LinearLayout>

        <!-- 反馈 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_feedback"
            android:layout_marginTop="10dp"
            android:padding="10dp"/>
        <LinearLayout
            android:id="@+id/feedback_ll_content_setting"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:clickable="true"
            android:foreground="?android:selectableItemBackground"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_feedback_info"
                android:textColor="@color/black"/>
        </LinearLayout>

    </LinearLayout>


</ScrollView>